Update exomiser-data-genome internals to allow for cleaner separation of resources when building independent data sources. For example, building the clinvar data will not compaind about a missing Jannovar default_sources.ini file.